--- a/www/index.html
+++ b/www/index.html
@@ -151,6 +151,29 @@ body {
     </a>-->
 </div>
 <br>
+
+
+
+<!-- botoes acesso -->
+<div class="container">
+
+
+
+        <a href="sobre.html"> <button type="button" class="btn btn-danger btn-lg btn-block">Sobre</button></a>
+    <br>
+    
+        <a href="https://lojista-dev.imotopecas.com.br/parceiro"></a><button type="button" class="btn btn-danger btn-lg btn-block">Seja um parceiro</button></a>
+  <br>
+  
+        <a href="https://lojista-dev.imotopecas.com.br/"> <button type="button" class="btn btn-danger btn-lg btn-block">Área do lojista</button></a>
+ <br>
+        <a href="https://dev.imotopecas.com.br/fale-conosco"> <button type="button" class="btn btn-danger btn-lg btn-block">Fale conosco</button></a>
+  
+
+    </div>
+  <!-- fim botoes -->
+
+<br>
 <h5 class="m-3 h4"><hr></h5>
 <footer>
     <div class="container footer-links">
