Corrigido o link REDES SOCIAIS: Facebook. /  Não estava abrindo pelo APP do aparelho, mas pelo browser

--- a/www/index.html
+++ b/www/index.html
@@ -197,9 +197,9 @@ body {
                         <div class="col-md-3 social">
                                 <h5>SIGA NOSSAS REDES SOCIAIS</h5>
                                 <ul class="list-display">
-                                  <li><a onclick="cordova.InAppBrowser.open('https://www.facebook.com/ImotopecasMarketplace','_system','location=yes')">facebook</a></li>
+                                  <li><a onclick="cordova.InAppBrowser.open('facebook:/ImotopecasMarketplace','_system','location=yes')">facebook</a></li>
                                   <li><a onclick="cordova.InAppBrowser.open('https://www.instagram.com/imotopecas/','_system','location=yes')">instagram</a></li>
-                                  <li><a onclick="cordova.InAppBrowser.open('https://twitter.com/imotopecas_','_system','location=yes')"  class="twitter">twitter</a></li>
+                                  <li><a onclick="cordova.InAppBrowser.open('https://www.twitter.com/imotopecas_/','_system','location=yes')"  class="twitter">twitter</a></li>
                                   <li><a onclick="cordova.InAppBrowser.open('https://www.youtube.com/channel/UCa10bkhJsv-qb6PFDEVUqhA','_system','location=yes')">youtube</a></li>
                                   <li><a onclick="cordova.InAppBrowser.open('https://plus.google.com/+ImotopecasMarketplace','_system','location=yes')">googleplus</a></li>
                                 </ul>
