acertos de visualização

--- a/www/menu.html
+++ b/www/menu.html
@@ -2,6 +2,7 @@
     <div class="list-group list-group-flush bg-light " id="menuInicio">
         <div class="row pb-3 pt-3 mktplc-red">
             <div class="col-xs-2 ml-5">
+                <img  onclick="backMenuSimple();" class="float-left  mr-4 mt-4" src="glyphicons/glyphicons-225-chevron-leftW.png" width="12" height="23">
                 <img class="float-right" id="menuUserIcon" src="./img/user_menuW.png" alt="user"   width="70" height="70" >
             </div>
             <div class="col float-left text-white">
