--- a/www/product.html
+++ b/www/product.html
@@ -177,7 +177,7 @@ body {
  <hr>
  
  </div>
- <div class="row pl-3 pr-3" >
+ <div class="row pl-3 pr-3" id="detalhes_venda">
  
          <div class="col">
  
@@ -319,7 +319,14 @@ p {
     margin-left: 1%;
     text-align: justify;
 }
+/* fix screen bug */
+#detalhes_venda{
+    width: 100%;
+}
 
+.btn:hover {
+  text-decoration: none;
+}
 </style>
 
 
