--- a/www/menu.html
+++ b/www/menu.html
@@ -5,10 +5,11 @@
                 <img  onclick="backMenuSimple();" class="float-left  mr-4 mt-4" src="glyphicons/glyphicons-225-chevron-leftW.png" width="12" height="23">
                 <img class="float-right" id="menuUserIcon" src="./img/user_menuW.png" alt="user"   width="70" height="70" >
             </div>
+            <a href="perfil.html">
             <div class="col float-left text-white">
                 <h4 id="txNome">Gian</h4>
                 <h6 id="txEmail">gian@gmail.com</h6>
-            </div>
+            </div></a>
         </div>
         <a class="list-group-item list-group-item-action flex-column align-items-start bg-light p4 pt-3 pb-3 text-dark h6 border-1" >
             <img src="glyphicons/glyphicons-28-search.png" width="20" height="20" >&nbsp;Busca por Categorias
