--- a/www/index.html
+++ b/www/index.html
@@ -124,7 +124,12 @@ body {
         </div>
     </a>
 </div>
-
+<style>
+    p{
+        color: green;
+    }
+    
+    </style>
 <div class="container-fluid panel-body">
     <!-- <h5 class="m-3 h4">Navegue por Categorias<hr></h5>
     <a class="card mt-3 boxshadow border-0" href="./category.html?tipo=1&idCtg=31">
