add pagina busca por categorias menu-categorias.html

--- a/www/menu.html
+++ b/www/menu.html
@@ -11,7 +11,7 @@
                 <h6 id="txEmail">gian@gmail.com</h6>
             </div></a>
         </div>
-        <a class="list-group-item list-group-item-action flex-column align-items-start bg-light p4 pt-3 pb-3 text-dark h6 border-1" >
+        <a class="list-group-item list-group-item-action flex-column align-items-start bg-light p4 pt-3 pb-3 text-dark h6 border-1" href="menu-categorias.html" >
             <img src="glyphicons/glyphicons-28-search.png" width="20" height="20" >&nbsp;Busca por Categorias
             <!-- <img class="float-right" src="glyphicons/glyphicons-224-chevron-right.png" width="10" height="15"> -->
         </a>
