--- a/platforms/browser/www/category.html
+++ b/platforms/browser/www/category.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html onclick="fechaFiltro(event)" >
 <head>
 <meta charset="utf-8" />
 <meta name="format-detection" content="telephone=no" />
@@ -12,6 +12,7 @@
 <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
 <script type="text/javascript" src="js/popper.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/jquery.touchSwipe.min.js"></script>
 <script type="text/javascript" src="js/mask.js"></script>
 <script type="text/javascript">
 var idCtg = 0;
@@ -21,16 +22,16 @@ var lastIdx = 0;
 document.addEventListener("deviceready", onDeviceReady, false);
 function onDeviceReady(){
     document.addEventListener("backbutton", onBackKeyDown, false);
-    startMenu(JSON.parse(window.localStorage.getItem("imotoCateg")));
+    iniciaApp();
+    $.get("filtro.html", function(data){
+        $('#mainbody').prepend(data);
+    });
+    //startMenu(JSON.parse(window.localStorage.getItem("imotoCateg")));
     getUrlVars();
 }
     
 function onBackKeyDown() {
-    if(device.platform=="iOS"){
-        history.go(-1);
-    } else if(device.platform=="Android") {
-        navigator.app.backHistory();
-    }
+    backMenu();
 }
 
 function getUrlVars(){
@@ -39,11 +40,12 @@ function getUrlVars(){
     var tipo = unescape(getTipo[1]);
 	var getCtg = parameters[1].split("=");
     idCtg = unescape(getCtg[1]);
-    if(tipo==1){
-        selCateg(JSON.parse(window.localStorage.getItem("imotoCateg")));
-    } else {
-        selSubCateg(JSON.parse(window.localStorage.getItem("imotoCateg")));
-    }
+    // if(tipo==1){
+    //     selCateg(JSON.parse(window.localStorage.getItem("imotoCateg")));
+    // } else {
+    //     selSubCateg(JSON.parse(window.localStorage.getItem("imotoCateg")));
+    // }
+    loadIdProd();
 }
 
 function selSubCateg(objCateg){
@@ -170,47 +172,15 @@ html {
     -o-background-size: 100% auto;
 }
 
-body {
-    padding-top: 175px !important;
-}
 </style>
 </head>
 <body class="panel panel-transparent bg-light" onscroll="detectScroll();">
 <img src="./glyphicons/glyphicons-217-circle-arrow-left.png" id="backimg" onclick="onBackKeyDown();" width="30px" height="30px">
-<nav class="navbar navbar-light fixed-top navbar-default bg-white" >
-    <div class="navbar-brand">
-        <!--<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>-->
-        <button type="button" class="btn btn-light d-inline-block align-center button-menu" alt="" onclick="showhidemenu();"><img src="./glyphicons/glyphicons-517-menu-hamburger.png" width="25" height="18"></button>
-        <a class="d-inline-block align-center" href="index.html"><img src="./img/Logo.png" width="123" height="30" alt=""></a>
-    </div>
-</nav>
-<div class="bg-light" id="CategoriesMenu">
-    <div class="list-group list-group-flush bg-light" id="menuInicio">
-        <h5 class="text-dark m-3 h4">Todos os departamentos<hr></h5>
-    </div>
-</div>
-<div class="input-group mb-3 search-box" id="searchBox">
-    <input type="text" id="txPesquisa" class="form-control" placeholder="Pesquise..." aria-label="Filtrar" aria-describedby="btPesquisa">
-    <div class="input-group-append">
-        <span class="input-group-text glyphicon glyphicon-search" aria-hidden="true">
-            <img src="./glyphicons/glyphicons-28-search.png" width="20" height="20" alt="" onclick="searchProd();">
-        </span>
-    </div>
-</div>
-<div class="bg-white rounded boxshadow border-0 titulo-pag">
-    <h5 id="titCateg"></h5>
-</div>
 <div class="container-fluid panel-body" id="mainbody">
-    <!--<div class="card mt-3 rounded boxshadow border-0">
-        <a class="card-body">
-            <img class="float-left mr-3" width="45" height="25" src="./img/moto.png" alt="">
-            <p class="card-text">Peças e Acessórios para você e sua moto, confira!</p>
-        </a>
-    </div>-->
-
-    <!--<h5 class="m-3 h4">Destaques</h5>-->
+    <!-- Aqui vai o filtro -->
+    <div class="bg-white rounded boxshadow border-0 mt-3 titulo-pag">
+        <h5 id="titCateg"></h5>
+    </div>
     <div class="list-group" id="tbProd">
     </div>
 </div>
