--- a/platforms/browser/www/search.html
+++ b/platforms/browser/www/search.html
@@ -12,6 +12,7 @@
 <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
 <script type="text/javascript" src="js/popper.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/jquery.touchSwipe.min.js"></script>
 <script type="text/javascript" src="js/mask.js"></script>
 <script type="text/javascript">
 var idCtg = 0;
@@ -22,15 +23,13 @@ var lastIdx = 0;
 document.addEventListener("deviceready", onDeviceReady, false);
 function onDeviceReady(){
     document.addEventListener("backbutton", onBackKeyDown, false);
-    startMenu(JSON.parse(window.localStorage.getItem("imotoCateg")));
+    iniciaApp();
+    //startMenu(JSON.parse(window.localStorage.getItem("imotoCateg")));
     getUrlVars();
 }
     
-function onBackKeyDown() { if(device.platform=="iOS"){
-        history.go(-1);
-    } else if(device.platform=="Android") {
-        navigator.app.backHistory();
-    }
+function onBackKeyDown() {
+    backMenu();
 }
 
 function getUrlVars(){
@@ -139,31 +138,13 @@ html {
 }
 
 body {
-    padding-top: 175px !important;
+    padding-bottom: 0px !important;
 }
 </style>
 </head>
 <body class="panel panel-transparent bg-light" onscroll="detectScroll();">
 <img src="./glyphicons/glyphicons-217-circle-arrow-left.png" id="backimg" onclick="onBackKeyDown();" width="30px" height="30px">
-<nav class="navbar navbar-light fixed-top navbar-default bg-white" >
-    <div class="navbar-brand">
-        <button type="button" class="btn btn-light d-inline-block align-center button-menu" alt="" onclick="showhidemenu();"><img src="./glyphicons/glyphicons-517-menu-hamburger.png" width="25" height="18"></button>
-        <a class="d-inline-block align-center" href="index.html"><img src="./img/Logo.png" width="123" height="30" alt=""></a>
-    </div>
-</nav>
-<div class="bg-light" id="CategoriesMenu">
-    <div class="list-group list-group-flush bg-light" id="menuInicio">
-        <h5 class="text-dark m-3 h4">Todos os departamentos<hr></h5>
-    </div>
-</div>
-<div class="input-group mb-3 search-box" id="searchBox">
-    <input type="text" id="txPesquisa" class="form-control" placeholder="Pesquise..." aria-label="Filtrar" aria-describedby="btPesquisa" >
-    <div class="input-group-append">
-        <span class="input-group-text glyphicon glyphicon-search" aria-hidden="true">
-            <img src="./glyphicons/glyphicons-28-search.png" width="20" height="20" alt="" onclick="searchProd();">
-        </span>
-    </div>
-</div>
+
 <div class="bg-white rounded boxshadow border-0 titulo-pag">
     <h5 id="titCateg"></h5>
 </div>
@@ -172,12 +153,4 @@ body {
     </div>
 </div>
 </body>
-<script>
-$('#txPesquisa').keypress(function(event) {
-    var keycode = (event.keyCode ? event.keyCode : event.which);
-    if(keycode == '13'){
-        searchProd();
-    }
-});
-</script>
 </html>
